nascom section mobile version fixed

--- a/css/main.css
+++ b/css/main.css
@@ -1072,9 +1072,9 @@ a {
 		height: auto;
 		margin: 0 auto;
 	}
-	.content-wraper {
+	/* .content-wraper {
 		margin-top: 60px;
-	}
+	} */
 }
 /*---features----*/
 .feature-img{
@@ -3687,7 +3687,7 @@ padding-left: 10px;
 	}
 	.razorops-do-img{
 		width: 200px;
-		margin-top: -28px;
+		margin-top: 28px;
 	}
 	.razorops-do-img2{
 		width: 230px;
